--- a/docs/tictactoe.css
+++ b/docs/tictactoe.css
@@ -1,11 +1,20 @@
 .cell {
-    background-color: lightgrey;
+    background-color: rgb(240, 238, 238) ;
     position: absolute;
     top: 0;
     left: 0;
     width: 98%;
     height: 98%;
     margin: 1%;
+}
+.ucell {
+    background-color: rgb(240, 250, 180) ;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 1px solid grey;
 }
 /* .cell-0 {
     background-color: grey;
@@ -23,4 +32,76 @@
     overflow: hidden;
     padding-top: 33%;
     position: relative;
+}
+
+.control{
+    width: 100%;
+}
+
+
+.subBoard{
+    border: 2px solid black;
+    
+}
+.subBoard-0{
+    position: relative;
+}
+.subBoard-0:after {
+    content: " ";
+    z-index: 10;
+    display: block;
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.3);
+}
+
+.subWin-1{
+    position: relative;
+}
+
+.subWin-1:after {
+    content: " ";
+    z-index: 10;
+    display: block;
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: rgba(247, 156, 156, 0.6);
+}
+
+.subWin-2{
+    position: relative;
+}
+
+.subWin-2:after {
+    content: " ";
+    z-index: 10;
+    display: block;
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: rgba(255, 255, 255, 0.6);
+}
+
+.subWin-3{
+    position: relative;
+}
+
+.subWin-3:after {
+    content: " ";
+    z-index: 10;
+    display: block;
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: rgba(5, 3, 3, 0.466);
 }
