--- a/docs/css/labyrinth.css
+++ b/docs/css/labyrinth.css
@@ -17,6 +17,10 @@
     top:300px;
     left:200px;
 }
+.bestplayer{
+    z-index: 1;
+    background-color: blueviolet;
+}
 
 .goal{
     width:5px;
